add feat: create new article

--- a/templates/admin/news/index.html.twig
+++ b/templates/admin/news/index.html.twig
@@ -22,5 +22,8 @@
             {% endfor %}
             </body>
         </table>
+        <div class="text-right">
+            <a href="{{ path('admin.news.new') }}" class="btn btn-primary">Créer un nouvel article</a>
+        </div>
     </div>
 {% endblock %}
