--- a/templates/pages/news/index.html.twig
+++ b/templates/pages/news/index.html.twig
@@ -11,7 +11,7 @@
                             <div class="card-text">
                                 <p>{{ news.description }}</p>
                                 <p>{{ news.author }}</p>
-
+                                <p {{ news.date }}</p>
                             </div>
 
                         </div>
