--- a/templates/admin/news/edit.html.twig
+++ b/templates/admin/news/edit.html.twig
@@ -3,6 +3,6 @@
 {% block body %}
 <div class="container">
     <h1>Editer l'article</h1>
-
+    {{ include ('admin/news/_form.html.twig', {form: form, button: 'Editer'}) }}
 </div>
-{% endblock %}
+{% endblock%}
