--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,10 @@
                         <a class="nav-link" href="{{ path('news.index') }}">Actualités</a>
                     </li>
                 </ul>
-                <a href="{{ path('contact.index') }}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Nous Contacter</a>
+
+                <a href="{{ path('contact.index') }}" class="" role="button" aria-pressed="true">
+                    <button class="float-right align-middle rounded-pill">Nous Contacter</button>
+                </a>
             </div>
         </nav>
 
@@ -113,8 +116,8 @@
         <!-- Footer Links -->
 
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2018 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="{{ path('cgu.index') }}"> Mentions Légales et CGU</a>
         </div>
         <!-- Copyright -->
 
@@ -124,7 +127,7 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-            <script src="{{ asset('/assets/js/underline_magical.js') }}"</script>
+            <script src="{{ asset('/assets/js/underline_magical.js') }}"></script>
         {% endblock %}
     </body>
 </html>
